// Copyright 2016 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package android.vts;
option java_package = "com.android.vts.proto";
option java_outer_classname = "VtsWebStatusMessage";


// To specify test case execution result.
enum TestStatus {
  TEST_UNKNOWN = 0;
  TEST_OK = 1;
  TEST_FAIL = 2;
}

// To specify a test execution report.
message TestStatusMessage {
  // the test suite name.
  optional bytes test_suite = 1;

  // the test name.
  optional bytes test = 2;

  // status update timestamp.
  optional int64 status_timestamp = 3;

  // test status.
  optional TestStatus status = 4;

  // failed tests
  repeated bytes failed_testcases = 5;
}

